<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/signup"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="san-sarif"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:fontFamily="san-sarif"
        android:layout_below="@+id/term"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t2"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:fontFamily="san-sarif"
        android:layout_below="@+id/t1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="san-sarif"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:layout_below="@+id/t2"
        />

    <TextView
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t4"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:fontFamily="san-sarif"
        android:layout_below="@+id/t3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t5"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:fontFamily="san-sarif"
        android:layout_below="@+id/t4"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t6"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="san-sarif"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:layout_below="@+id/t5"
        />

    <Button
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="san-sarif"
        android:background="@drawable/loginbutton_selector"
        android:textColor="#fff"
        android:textSize="14dp"
        android:text="Accept"
        />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/loginbutton_selector"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="san-sarif"
        android:textSize="14dp"
        android:text="Decline"
        android:textColor="#fff"/>
</RelativeLayout>