<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:gravity="center"
android:orientation="vertical"
android:background="@drawable/signup"
android:padding="20dp" >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/app_name"
    android:padding="50dp"
    android:textColor="@color/white_greyish"
    android:textSize="25sp"
    android:textStyle="bold" />

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="10dp"
    android:text="@string/registered_emailid"
    android:textColor="@color/white_greyish"
    android:textSize="14sp"
    android:textStyle="bold" />
<View
    android:layout_width="fill_parent"
    android:layout_height="1px"
    android:padding="5dp"
    android:background="@color/white_greyish"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#555c5b"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/layer2"
            android:padding="16dp"/>
    </FrameLayout>

    <EditText
        android:id="@+id/registered_emailid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#626562"
        android:padding="16dp"
        android:hint="Email Address"
        android:textColorHint="#fff"
        android:textSize="14dp"
        android:inputType="text"
        android:textColor="#fff"
        android:singleLine="true"

        />

</LinearLayout>

<View
    android:layout_width="fill_parent"
    android:layout_height="1px"
    android:padding="5dp"
    android:background="@color/white_greyish"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"/>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp" >

    <TextView
        android:id="@+id/backToLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:padding="5dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:padding="5dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>

</LinearLayout>