<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@drawable/signup"
android:padding="20dp" >
<LinearLayout
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="50dp"
        android:textStyle="bold"
        android:textSize="50dp"
        android:text="iListen"
        android:fontFamily="sans-serif"
        android:textColor="#fff"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#555c5b"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/layer2"
                android:padding="16dp"/>
        </FrameLayout>

        <EditText
            android:id="@+id/login_emailid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#626562"
            android:padding="16dp"
            android:hint="Username"
            android:textColorHint="#fff"
            android:textSize="14dp"
            android:inputType="text"
            android:textColor="#fff"
            android:singleLine="true"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        >
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#555c5b"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/layer4"
                android:padding="16dp"/>
        </FrameLayout>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#626562"
            android:padding="16dp"
            android:hint="Password"
            android:textColorHint="#fff"
            android:textSize="14dp"
            android:inputType="numberPassword"
            android:textColor="#fff"
            android:singleLine="true"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:paddingTop="8dp" >

        <CheckBox
            android:id="@+id/show_hide_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_pwd"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/forgot"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="3dp"
        android:text="@string/login"
        android:background="#555c5b"
        android:textColor="#fff"
        />
</LinearLayout>

<TextView
    android:id="@+id/createAccount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Already have An Account ? Sign In"
    android:textColor="#fff"
    android:layout_alignParentBottom="true"
    android:padding="20dp"
    android:gravity="center"

    />

</RelativeLayout>